...
                android:text="Com base no último mês este local é:"
                android:textSize="12sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_perigo_status"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:backgroundTint="@color/black"
                android:text="PERIGOSO\n12 ocorrências"
                android:textColor="@color/white"
                android:textSize="16sp"
...
